# cliraoke

./: .env-sample  Cargo.toml  README.md  YouTubeAudioStreamDownloader.rs  main  scrapyard.rs  youtube_videos.csv
src/: action.rs  app.rs  audio.rs  cli.rs  components.rs  lib.rs  lyrics.rs  main.rs  state.rs  tui.rs  ui.rs  util.rs  widget.rs
src/audio/: mod.rs  platform.rs  youtube.rs
src/cli/: mod.rs
src/components/: container.rs  help.rs  home.rs  lyrics.rs  queue.rs  search.rs  stateful_list.rs  timer.rs  title.rs
src/constants/: focus.rs  mod.rs
src/core/: README.md  main.rs
src/core/audio/: mod.rs
src/core/cli/: mod.rs
src/core/lyrics/: error.rs
src/events/: event.rs  key.rs  mod.rs
src/lyrics/: lrclib.rs  mod.rs
src/models/: song.rs
src/old/: mod.rs
