[package]
name = "cliraoke"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
dotenv = "0.15"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
rodio = "0.20.1"
serde_json = "1.0"
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
    "std",
] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
yt-dlp = "1.2.3"
